--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+/* MOBILE FIRST */
+
 *,
 *::before,
 *::after {
@@ -34,6 +36,12 @@
     --fs-lg: 1.25rem;
     --fs-xl: 1.5rem;
     --fs-2xl: 2.5rem;
+
+    --py-base: 1rem;
+    --py-lg: 1.5rem;
+    --py-xl: 3rem;
+
+    --px-lg: 1.5rem;
 }
 
 html {
@@ -76,10 +84,17 @@ ul [role="list"] {
     list-style: none;
 }
 
+/* DESTKOP */
 @media (width >= 80em) {
     :root {
         --fs-lg: 2rem;
         --fs-xl: 3rem;
         --fs-2xl: 4rem;
+        
+        --py-base: 1.5rem;
+        --py-lg: 2.5rem;
+        --py-xl: 5rem;
+
+        --px-lg: 2rem;
     }
 }
