--- a/styles/utility.css
+++ b/styles/utility.css
@@ -36,12 +36,19 @@
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
 .grid {
     display: grid;
 }
 
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 
 /* DESKTOP */
