--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -25,6 +25,11 @@
     var(--brand-color-primary) 100%
     );
     --btn-color: var(--surface-color);
+
+    -webkit-background-clip: initial;
+    background-clip: initial;
+
+    color: var(--btn-color);
 }
 
 .btn-sm {    
@@ -60,5 +65,18 @@
         background-clip: text;
         color: transparent;
         position: relative;
+    }
+}
+
+@media (width >= 80em) {   
+    
+    .btn-sm {
+        font-size: var(--fs-base);
+        padding: .75rem 1.5rem;
+    }
+    
+    .btn-md {
+        font-size: var(--fs-lg);
+        padding: 1rem 2rem;
     }
 }
